Closed
Bug 1722002
Opened 4 years ago
Closed 4 years ago
Perma [Tier 2]tests/jit-test/jit-test/tests/class/bug1720032-1.js | (code 138, args "--ion-eager --ion-offthread-compile=off --more-compartments") [0.2 s]
Categories
(Core :: JavaScript Engine, defect, P5)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
92 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox90 | --- | unaffected |
| firefox91 | --- | unaffected |
| firefox92 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: anba)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=346142277&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/FAash96xRCmfBcMlhbvkYQ/runs/0/artifacts/public/logs/live_backing.log
INFO - TEST-PASS | tests/jit-test/jit-test/tests/class/bug1720032-1.js | Success (code 0, args "") [0.1 s]
[task 2021-07-23T10:40:21.864Z] 10:40:20 INFO - Exit code: 138
[task 2021-07-23T10:40:21.864Z] 10:40:20 INFO - FAIL - class/bug1720032-1.js
[task 2021-07-23T10:40:21.864Z] 10:40:20 WARNING - TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/class/bug1720032-1.js | (code 138, args "--ion-eager --ion-offthread-compile=off --more-compartments") [0.2 s]
[task 2021-07-23T10:40:21.864Z] 10:40:20 INFO - INFO exit-status : 138
[task 2021-07-23T10:40:21.864Z] 10:40:20 INFO - INFO timed-out : False
[task 2021-07-23T10:40:21.864Z] 10:40:20 INFO - INFO stdout >
[task 2021-07-23T10:40:21.864Z] 10:40:20 INFO - INFO stderr 2>
[task 2021-07-23T10:40:21.864Z] 10:40:20 INFO - TEST-PASS | tests/jit-test/jit-test/tests/class/bug1720032-1.js | Success (code 0, args "--baseline-eager") [0.1 s]
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 2•4 years ago
|
||
This change fixes the perma-failure on Android hardware (which isn't reproducible
on the simulators). Bug 1722269 requires to rework CheckReturn anyway, so it
doesn't make much sense to investigate the cause of this failure in detail.
Updated•4 years ago
|
Assignee: nobody → andrebargull
Status: NEW → ASSIGNED
Comment 3•4 years ago
|
||
Set release status flags based on info from the regressing bug 1720032
status-firefox90:
--- → unaffected
status-firefox91:
--- → unaffected
status-firefox92:
--- → affected
status-firefox-esr78:
--- → unaffected
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Pushed by andre.bargull@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/84ccc63222c2
Change JSOp::CheckReturn to not directly store the return-value. r=jandem
Comment 9•4 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
| Comment hidden (Intermittent Failures Robot) |
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•