Bug 1722002: Change JSOp::CheckReturn to not directly store the return-value. r=jandem

This change fixes the perma-failure on Android hardware (which isn't reproducible
on the simulators). Bug 1722269 requires to rework `CheckReturn` anyway, so it
doesn't make much sense to investigate the cause of this failure in detail.

Differential Revision: https://phabricator.services.mozilla.com/D120841