js/src/vm/Stack.h
@@ -388,7 +388,7 @@ class InterpreterFrame {
   bool prologue(JSContext* cx);
   void epilogue(JSContext* cx, jsbytecode* pc);
 
-  bool checkReturn(JSContext* cx, HandleValue thisv);
+  bool checkReturn(JSContext* cx, HandleValue thisv, MutableHandleValue result);
 
   bool initFunctionEnvironmentObjects(JSContext* cx);
 
